--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
-    "@iconify-icons/eva": "^1.2.6",
     "@headlessui/react": "^1.7.17",
+    "@iconify-icons/eva": "^1.2.6",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -23,6 +23,7 @@
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
+    "tailwind-datepicker-react": "^1.4.3",
     "vite": "^5.0.3",
     "web-vitals": "^2.1.4"
   },
