--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
-    "@iconify-icons/eva": "^1.2.6",
     "@headlessui/react": "^1.7.17",
+    "@iconify-icons/eva": "^1.2.6",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.45.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router": "^6.20.1",
