--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "flatpickr": "^4.6.13",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-flatpickr": "^3.10.13",
     "react-redux": "^8.1.3",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.0",
