--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT = 3000
 DOMAIN_NAME = 'localhost:3000'
+# .env.production
+.env.production.NODE_ENV = production
+.env.production.process = production
 API_URL=http://18.184.42.132:3000
