--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "flatpickr": "^4.6.13",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "luxon": "^3.4.4",
     "moment": "^2.30.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
