--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.38",
+    "@amcharts/amcharts4-geodata": "^4.1.28",
+    "@amcharts/amcharts5": "^5.8.2",
+    "@amcharts/amcharts5-fonts": "^5.0.1",
+    "@amcharts/amcharts5-geodata": "^5.1.2",
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@headlessui/react": "^1.7.17",
+    "@highcharts/map-collection": "^2.1.0",
     "@iconify-icons/eva": "^1.2.6",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,11 +24,15 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "flatpickr": "^4.6.13",
+    "highcharts": "^11.3.0",
+    "highcharts-react-official": "^3.2.1",
     "jsonwebtoken": "^9.0.2",
+    "jsvectormap": "^1.5.3",
     "lodash": "^4.17.21",
     "luxon": "^3.4.4",
     "moment": "^2.30.1",
     "path": "^0.12.7",
+    "proj4": "^2.10.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
